--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "heavywait"
-version = "0.1.1a1"
+version = "0.1.1a2"
 authors = ["MechRegard <dave.lange@gmail.com>"]
 description = "Add some weight behind the markdown"
 homepage = "https://github.com/mechregard/heavy-wait"
@@ -12,7 +12,7 @@ include = ["LICENSE",]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-langchain = "*"
+langchain = "^0.0.192"
 openai = "*"
 click = "*"
 
