--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "heavywait"
-version = "0.1.1a2"
+version = "0.1.1"
 authors = ["MechRegard <dave.lange@gmail.com>"]
 description = "Add some weight behind the markdown"
 homepage = "https://github.com/mechregard/heavy-wait"
